--- a/src/app/courses/components/time-control/time-control.component.html
+++ b/src/app/courses/components/time-control/time-control.component.html
@@ -1,1 +1,1 @@
-<input type="text" class="input-hidden" id="duration" name="duration" (change)="pushChanges($event.target.value)">
+<input type="text" class="input-hidden" id="duration" name="duration" [value]="duration" (blur)="onTouched($event)">
