--- a/src/app/courses/components/date-control/date-control.component.html
+++ b/src/app/courses/components/date-control/date-control.component.html
@@ -1,3 +1,3 @@
-<input type="text" class="input-hidden" id="createDate" name="createDate" [value]="createDate" (blur)="onTouched($event)"  datevalidator>
+<input type="text" class="input-hidden" id="duration" name="duration" [value]="createDate" (change)="onChangeInput($event)" (blur)="onChangeInput($event)">
 
 
