--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,14 +12,22 @@
                   login: test@gmail.com<br>
                   password: 1
                 </div>
-                <form class="login-form">
+                <form class="login-form" [formGroup]="loginForm">
                   <div class="form-group">
                     <label for="login">Email:</label>
-                    <input type="login" class="form-control" id="login" name="login" [(ngModel)]="user.login">
+                    <input type="login" class="form-control" id="login" name="login" formControlName="login" [ngClass]="{ 'is-invalid': g.login.touched && g.login.errors}">
+                    <div *ngIf="g.login.touched  && g.login.errors" class="invalid-feedback">
+                      <div *ngIf="g.login.errors.required">login is required</div>
+                      <div *ngIf="g.login.errors.maxlength">login must be no more than 10 characters</div>
+                    </div>
                   </div>
                   <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" class="form-control" id="password" name="password" [(ngModel)]="user.password">
+                    <input type="password" class="form-control" id="password" name="password" formControlName="password" [ngClass]="{ 'is-invalid': g.login.touched && g.login.errors}">
+                    <div *ngIf="g.password.touched  && g.password.errors" class="invalid-feedback">
+                      <div *ngIf="g.password.errors.required">password is required</div>
+                      <div *ngIf="g.password.errors.maxlength">password must be no more than 10 characters</div>
+                    </div>
                   </div>
                   <button class="btn btn-default" (click)="onLogin()">Login</button>
                   <p>
